Adding live peer broadcasting